Oauth added using continue with google and multiple UI improvements , few mock data aadded